src/objects/gdf_Smart_Plugs__c.object
<CustomObject>
    <fields>
        <fullName>gdf_CoffeeMachine_00_00__c</fullName>
        <label>CoffeeMachine 00:00</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_CoffeeMachine_00_15__c</fullName>
        <label>CoffeeMachine 00:15</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_CoffeeMachine_00_30__c</fullName>
        <label>CoffeeMachine 00:30</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Date__c</fullName>
        <description>metrics from devices per 24 hours per day</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gdf_Freezer_00_00__c</fullName>
        <label>Freezer 00:00</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Freezer_00_15__c</fullName>
        <label>Freezer 00:15</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Freezer_00_30__c</fullName>
        <label>Freezer 00:30</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_TV_00_00__c</fullName>
        <label>TV 00:00</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_TV_00_15__c</fullName>
        <label>TV 00:15</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_TV_00_30__c</fullName>
        <label>TV 00:30</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Washing_00_00__c</fullName>
        <label>Washing 00:00</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Washing_00_15__c</fullName>
        <label>Washing 00:15</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Washing_00_30__c</fullName>
        <label>Washing 00:30</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <label>Smart Plugs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Smart Plugs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smart Plugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>